Se cambiaron los botones del nav, se agrego la grafica (mal organizada pero se agrego y sha :) )

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 
     <header class="jumbotron jumbotron-fluid text-white bg-primary">
         <div class="container">
-            <h1 class="display-4">Bienvenidos a</h1>
+            <h1 class="display-4">Presentamos</h1>
             <a class="cosito">
                 <img src="content/navsafe.png" alt="NavSafe Logo" style="height: 90px;">  
             </a>
-            <p class="lead">Plataforma educativa para combatir el ciberacoso</p>
+            <p class="lead">Plataforma educativa para combatir el ciberacoso apoyada con IA</p>
         </div>
     </header>
 
@@ -56,6 +56,15 @@
                 <h2>Contáctanos</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse imperdiet.</p>
             </div>
+            <div class="col-md-4" style="position:relative;padding-bottom:53%;padding-top:25px;height:0;">
+                <h2>Casos de Ciber Acoso en Niños Colombianos</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti odio maiores dolor minus. Asperiores, et beatae distinctio placeat in quibusdam doloribus nesciunt eos autem, incidunt reiciendis commodi possimus assumenda minima.
+                    Mollitia porro libero voluptatum iusto minus vitae, laudantium similique voluptatem numquam dolores, ipsa consequatur. Labore, quasi suscipit? Asperiores quae aliquam fugiat unde, voluptate, temporibus ullam ea, quas magnam consequatur ducimus!
+                    <iframe style="position:absolute;top:0;left:0;width:100%;height:100%;" src="https://embed.plandemejora.com/diagrama-de-anillos/akFTDQvJJlVwczaGYlOf/"></iframe>
+                </p>
+            </div>    
+            
         </section>
     </main>
 
