Se arreglo el grafico, se cambio de posicion el carrusel, se agrego icono, se documento la mayoria del codigo y se agrego el texto del sitio web

--- a/about.html
+++ b/about.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>EduSafe/NavSafe - Sobre Nosotros</title>
+    <title>NavSafe - Sobre Nosotros</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="content/NavSafe_Sin_Fondo_icono.ico" type="image/x-icon">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -34,23 +35,37 @@
 
     <header class="jumbotron jumbotron-fluid text-white bg-secondary">
         <div class="container">
-            <h1 class="display-4">Sobre Nosotros</h1>
-            <p class="lead">Conoce más sobre EduSafe/NavSafe</p>
+
+            <a class="cosito">
+                <img src="content/banner1.jpg" class="d-block w-100" alt="NavSafe Logo" style="height: 100%;" >
+            </a>    
+
         </div>
     </header>
 
     <main class="container my-5">
         <section>
             <h2>Nuestra Historia</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse imperdiet.</p>
+            <p>La idea de NavSafe nació a partir de una preocupación creciente por el aumento del ciberacoso y la falta de recursos educativos adaptados para enfrentar este problema. En un mundo cada vez más digitalizado, nos dimos cuenta de que los niños y jóvenes de Latinoamérica estaban expuestos a riesgos en línea sin contar con herramientas efectivas para protegerse.</p>
+            <p>Inspirados por la necesidad de crear un entorno digital más seguro, un grupo de profesionales en educación, psicología y tecnología se unieron para desarrollar una solución integral. Decidimos combinar nuestros conocimientos y experiencia para crear NavSafe, una plataforma educativa innovadora basada en inteligencia artificial.</p>
+            <p>NavSafe está diseñada para ofrecer contenido educativo interactivo y estrategias específicas que ayuden a los jóvenes a identificar, prevenir y enfrentar el ciberacoso. Al analizar la actividad en sitios web y redes sociales, la plataforma personaliza el aprendizaje y proporciona recursos adaptados a las necesidades de cada usuario.</p>
         </section>
         <section>
             <h2>Nuestro Equipo</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse imperdiet.</p>
+            <p>Estamos compuestos por un grupo de profesionales dedicados a la lucha contra el ciberacoso y la promoción de una cultura digital segura:</p>
+            <ul>
+                <li><strong>Juan Manuel González Mejía</strong><br>Email: <a href="mailto:gonzalezmejiaj264@gmail.com">gonzalezmejiaj264@gmail.com</a></li>
+                <li><strong>Isabella Bernal García</strong><br>Email: <a href="mailto:isabellabernalgarcia1@gmail.com">isabellabernalgarcia1@gmail.com</a></li>
+                <li><strong>Ana Isabel Calderón Tamayo</strong><br>Email: <a href="mailto:isabellabernalgarcia1@gmail.com">isabellabernalgarcia1@gmail.com</a></li>
+                <li><strong>Nicolás Cano Restrepo</strong><br>Email: <a href="mailto:nicocanorestrepo@gmail.com">nicocanorestrepo@gmail.com</a></li>
+                <li><strong>Omar Yesid García Guzmán</strong><br>Email: <a href="mailto:omar.garcia447@pascualbravo.edu.co">omar.garcia447@pascualbravo.edu.co</a></li>
+            </ul>
         </section>
         <section>
             <h2>Nuestra Visión</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse imperdiet.</p>
+            <p>Ser una plataforma reconocida por su impacto en la reducción del ciberacoso y el 
+                fomento de una cultura digital responsable, con un enfoque inclusivo y adaptativo 
+                que beneficie a más de una comunidad.</p>
         </section>
     </main>
 
