--- a/services.html
+++ b/services.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>EduSafe/NavSafe - Servicios</title>
+    <title>NavSafe - Servicios</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="content/NavSafe_Sin_Fondo_icono.ico" type="image/x-icon">
 </head>
 <body>
+    <!-- Barra de navegación -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
             <a class="navbar-brand">
-                <img src="content/navsafeblue.png" alt="NavSafe Logo" style="height: 30px;">  
+                <img src="content/navsafeblue.png" alt="NavSafe Logo" style="height: 30px;">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -32,36 +34,43 @@
         </div>
     </nav>
 
+    <!-- Encabezado principal -->
     <header class="jumbotron jumbotron-fluid text-white bg-success">
         <div class="container">
             <h1 class="display-4">Nuestros Servicios</h1>
-            <p class="lead">Descubre lo que ofrecemos</p>
+            <p class="lead">Descubre lo que ofrecemos en NavSafe</p>
         </div>
     </header>
 
+    <!-- Contenido principal -->
     <main class="container my-5">
+        <!-- Educación Personalizada -->
         <section class="row">
             <div class="col-md-6">
                 <h2>Educación Personalizada</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse imperdiet.</p>
+                <p>NavSafe utiliza inteligencia artificial para ofrecer contenido educativo adaptado a las necesidades de cada usuario. Analizamos la actividad en línea y proporcionamos consejos personalizados para ayudar a los niños y jóvenes a navegar de manera segura y a identificar situaciones de ciberacoso.</p>
             </div>
+            <!-- Implementación Piloto -->
             <div class="col-md-6">
                 <h2>Implementación Piloto</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse imperdiet.</p>
+                <p>Desplegamos programas piloto en escuelas seleccionadas para evaluar la eficacia de nuestra plataforma. Ajustamos las estrategias pedagógicas basadas en los resultados obtenidos para asegurar que nuestra solución sea efectiva y relevante para los niños y jóvenes.</p>
             </div>
         </section>
+        <!-- Campañas de Sensibilización -->
         <section class="row">
             <div class="col-md-6">
                 <h2>Campañas de Sensibilización</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse imperdiet.</p>
+                <p>Colaboramos con escuelas, padres y organizaciones comunitarias para promover NavSafe y capacitar a los usuarios en su uso. Nuestras campañas están diseñadas para sensibilizar sobre el ciberacoso y asegurar un impacto sostenible a largo plazo.</p>
             </div>
+            <!-- Colaboraciones Clave -->
             <div class="col-md-6">
                 <h2>Colaboraciones Clave</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse imperdiet.</p>
+                <p>Trabajamos con aliados estratégicos como el Ministerio de Educación, empresas tecnológicas y organizaciones comunitarias para desarrollar y promover nuestra plataforma. Estas colaboraciones son esenciales para garantizar la implementación efectiva y el alcance de NavSafe.</p>
             </div>
         </section>
     </main>
 
+    <!-- Pie de página -->
     <footer class="text-center py-4">
         <p>&copy; 2024 NavSafe.</p>
     </footer>
