--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>NavSafe - Inicio</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/footer.css">
     <link rel="icon" href="content/NavSafe_Sin_Fondo_icono.ico" type="image/x-icon">
 </head>
 <body>
@@ -34,16 +35,11 @@
         </div>
     </nav>
 
-    <!-- Encabezado principal -->
-    <header class="jumbotron jumbotron-fluid text-white bg-primary">
-        <div class="container">
-            <h1 class="display-4">Presentamos</h1>
-            <a class="cosito">
-                <img src="content/navsafe.png" alt="NavSafe Logo" style="height: 90px;">
-            </a>
-            <p class="lead">NavSafe es una plataforma educativa para combatir el ciberacoso, apoyada por IA.</p>
-        </div>
-    </header>
+    <div class="banner">
+        <img src="content/banner2.png" alt="Cargando Imagen">
+    </div>
+
+
 
     <!-- Contenido principal -->
     <main class="container my-5">
@@ -113,12 +109,82 @@
     
 
     <!-- Pie de página -->
-    <footer class="text-center py-4">
-        <p>&copy; 2024 NavSafe.</p>
+    <footer>
+        <div class="footer-container">
+            <div class="footer-section">
+                <h3>Sobre Nosotros</h3>
+                <p>En NavSafe, nos dedicamos a proteger y guiar a los jóvenes en el mundo digital. Ofrecemos educación interactiva, asesoramiento personalizado y trabajamos con escuelas para promover el uso seguro de la tecnología. Nuestro objetivo es crear un entorno en línea más seguro y positivo para todos.</p>
+            </div>
+
+            <div class="footer-section">
+                <h3>Enlaces Rápidos</h3>
+                <ul>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="about.html">Nosotros</a></li>
+                    <li><a href="services.html">Servicios</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-section">
+                <h3>Contáctanos</h3>
+                <div class="social-links">
+                    <ul class="example-2">
+                        <li class="icon-content">
+                            <a href="mailto:your-email@gmail.com" data-social="gmail" aria-label="Gmail">
+                                <div class="filled"></div>
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                    <path fill="currentColor"
+                                        d="M20 4H4C2.89 4 2 4.89 2 6v12c0 1.1.89 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.11-.9-2-2-2zM4 8l8 5 8-5v10H4V8zm16-2.5L12 10 4 5.5V6h16v-.5z" />
+                                </svg>
+                            </a>
+                            <div class="tooltip">Gmail</div>
+                        </li>
+
+                        <li class="icon-content">
+                            <a href="https://github.com/" data-social="github" aria-label="GitHub">
+                                <div class="filled"></div>
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+                                    <path
+                                        d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38v-1.49c-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48v2.2c0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8z"
+                                        fill="currentColor" />
+                                </svg>
+                            </a>
+                            <div class="tooltip">GitHub</div>
+                        </li>
+                        <li class="icon-content">
+                            <a href="https://www.instagram.com/" data-social="instagram" aria-label="Instagram">
+                                <div class="filled"></div>
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+                                    <path
+                                        d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z"
+                                        fill="currentColor" />
+                                </svg>
+                            </a>
+                            <div class="tooltip">Instagram</div>
+                        </li>
+                        <li class="icon-content">
+                            <a href="https://wa.me/your-number" data-social="whatsapp" aria-label="WhatsApp">
+                              <div class="filled"></div>
+                              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                <path fill="currentColor" d="M12 2.04c-5.5 0-9.96 4.46-9.96 9.96 0 1.75.47 3.44 1.34 4.95L2 22l5.07-1.33a9.946 9.946 0 0 0 4.93 1.34c5.5 0 9.96-4.46 9.96-9.96S17.5 2.04 12 2.04zm.39 15.92c-1.72 0-3.43-.51-4.89-1.48l-.35-.23-3.09.81.82-3.02-.23-.36c-.94-1.45-1.45-3.15-1.45-4.87 0-4.72 3.86-8.58 8.58-8.58 4.72 0 8.58 3.86 8.58 8.58 0 4.72-3.86 8.58-8.58 8.58zm3.29-5.64c-.17-.08-1.01-.5-1.17-.56-.15-.05-.26-.08-.36.08s-.41.56-.5.68c-.09.13-.19.15-.36.08-.17-.08-.72-.27-1.38-.87-.51-.46-.86-1.02-.96-1.2-.1-.17-.01-.26.07-.34.07-.07.17-.19.26-.29.09-.1.11-.17.17-.28.06-.12.03-.21-.02-.3-.05-.08-.47-1.14-.64-1.55-.16-.38-.32-.33-.46-.34-.12-.01-.21-.01-.29-.01-.09 0-.22.03-.34.16-.12.13-.45.45-.45 1.11 0 .65.47 1.27.54 1.36.07.09 1.04 1.59 2.52 2.22.59.26 1.05.41 1.41.52.59.19 1.13.17 1.55.1.47-.07 1.01-.42 1.15-.83.14-.41.14-.77.1-.84-.03-.08-.15-.13-.32-.2z"/>
+                              </svg>
+                            </a>
+                            <div class="tooltip">WhatsApp</div>
+                          </li>
+                          
+                    </ul>
+
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2024 NavSafe. Derechos Reservados</p>
+        </div>
     </footer>
+
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="scripts.js"></script>
+    <script src="javascript/scripts.js"></script>
 </body>
 </html>
