--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>NavSafe - Servicios</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="content/NavSafe_Sin_Fondo_icono.ico" type="image/x-icon">
 </head>
 <body>
@@ -34,13 +34,9 @@
         </div>
     </nav>
 
-    <!-- Encabezado principal -->
-    <header class="jumbotron jumbotron-fluid text-white bg-success">
-        <div class="container">
-            <h1 class="display-4">Nuestros Servicios</h1>
-            <p class="lead">Descubre lo que ofrecemos en NavSafe</p>
-        </div>
-    </header>
+    <div class="banner">
+        <img src="content/Banner_NavSafe_Servicios.png" alt="Cargando Imagen">
+    </div>
 
     <!-- Contenido principal -->
     <main class="container my-5">
@@ -77,6 +73,6 @@
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="scripts.js"></script>
+    <script src="javascript/scripts.js"></script>
 </body>
 </html>
